fix for bug #244217

Initial Mail retrieval from POP account fails(mac only)

the problem is that on the mac, nsPersistentFileDescriptor::operator= will fail silently if the file doesn't exist.
(that issue will be spun off)

on the mailnews side, we can create the msf file

r/sr=bienvenu